# swat-tools

./: .b4-config  .pre-commit-config.yaml  README.md  bugzilla.py  django.py  main.py  pyproject.toml  review.py  swat.py  swatbot.py  utils.py  webrequests.py
.github/workflows/: code_style.yml
selftest_perfs/: __init__.py  main.py
swat/: __init__.py  bugzilla.py  review.py  swatbot.py  utils.py  webrequests.py
swatbot_missing_builds/: __init__.py  buildbot_operations.py  main.py  swatbot_operations.py
swattool/: bugzilla.py  buildbotrest.py  database.py  initmanager.py  logfingerprint.py  logs.py  logsview.py  main.py  pokyciarchive.py  review.py  swatbot.py  swatbotrest.py  swatbuild.py  swatlogs.py  triagehistory.py  userdata.py  utils.py  webrequests.py
