[project]
name = "swattool"
version = "0.1.0"
description = "A python tool helping triage of Yocto autobuilder failures."
authors = [
    {name = "Mathieu Dubois-Briand", email = "mathieu.dubois-briand@bootlin.com"},
]
dependencies = [
	'setuptools',
	'wheel',
	'click==8.1.7',
	'pygit2',
	'PyYAML==6.0.2',
	'requests==2.32.3',
	'simple-term-menu==1.6.4',
	'tabulate==0.9.0',
	'xdg==6.0.0',
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools]
packages = ["swattool"]

[project.scripts]
swattool = "swattool.main:main"
